# git-lock-manager

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json
backend-api/: Cargo.toml
backend-api/src/: lib.rs
front-end/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/.cargo/: config.toml
frontend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lfs.rs  main.rs
