[package]
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend-api = {path = "../backend-api"}
js-sys = "0.3.45"
wasm-bindgen = {version = "0.2.68", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.18"
web-sys = "0.3.45"
yew = "0.17"
